Correction date column invisible when printing

--- a/public/stylesheets/print.less
+++ b/public/stylesheets/print.less
@@ -38,6 +38,10 @@
       h4 {
         margin-bottom: 12px;
       }
+      h5 {
+        font-style: italic;
+        margin-right: 32px;
+      }
     }
     #study {
       td {
