--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -375,6 +375,16 @@ body {
     .first-item td {
       border-top: 0;
     }
+    .study-diplom {
+      width: 200px;
+    }
+    .study-institute {
+      width: 230px;
+    }
+    .study-year {
+      text-align: center;
+      width: 100px;
+    }
   }
 
   .company-logo {
